{
  "version": 4,
  "terraform_version": "1.11.4",
  "serial": 1329,
  "lineage": "96806dfa-8831-c3dd-bad8-222391e26166",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d99ee70ca61207eb",
            "arn": "arn:aws:ec2:eu-central-1:942315318798:elastic-ip/eipalloc-0d99ee70ca61207eb",
            "domain": "vpc",
            "id": "eipalloc-0d99ee70ca61207eb",
            "network_border_group": "eu-central-1",
            "public_dns": "ec2-63-176-122-189.eu-central-1.compute.amazonaws.com",
            "public_ip": "63.176.122.189",
            "public_ipv4_pool": "amazon",
            "region": "eu-central-1",
            "tags": {
              "Environment": "production",
              "Name": "eco-webapp-eip"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "eco-webapp-eip"
            }
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:942315318798:internet-gateway/igw-0cbd5daae8e468215",
            "id": "igw-0cbd5daae8e468215",
            "owner_id": "942315318798",
            "region": "eu-central-1",
            "tags": {
              "Environment": "production",
              "Name": "eco-webapp-igw"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "eco-webapp-igw"
            },
            "vpc_id": "vpc-0a98c195aa9f74508"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:942315318798:loadbalancer/app/eco-webapp-alb/5d5df9d7e80a91d1",
            "arn_suffix": "app/eco-webapp-alb/5d5df9d7e80a91d1",
            "client_keep_alive": 3600,
            "connection_logs": [
              {
                "enabled": false
              }
            ],
            "desync_mitigation_mode": "defensive",
            "dns_name": "eco-webapp-alb-702818086.eu-central-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_tls_version_and_cipher_suite_headers": false,
            "enable_waf_fail_open": false,
            "enable_xff_client_port": false,
            "enable_zonal_shift": false,
            "id": "arn:aws:elasticloadbalancing:eu-central-1:942315318798:loadbalancer/app/eco-webapp-alb/5d5df9d7e80a91d1",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "eco-webapp-alb",
            "preserve_host_header": false,
            "region": "eu-central-1",
            "security_groups": [
              "sg-03136fb413ce02ea3"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0b56c761a9507e4d8"
              },
              {
                "subnet_id": "subnet-0e14fe0f16e7bc027"
              }
            ],
            "subnets": [
              "subnet-0b56c761a9507e4d8",
              "subnet-0e14fe0f16e7bc027"
            ],
            "tags": {
              "Environment": "production",
              "Name": "eco-webapp-alb"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "eco-webapp-alb"
            },
            "vpc_id": "vpc-0a98c195aa9f74508",
            "xff_header_processing_mode": "append",
            "zone_id": "Z215JYRZR1TBD5"
          },
          "dependencies": [
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:942315318798:listener/app/eco-webapp-alb/5d5df9d7e80a91d1/76a1fc7140260c5a",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:eu-central-1:942315318798:targetgroup/eco-webapp-tg/74149af0edc6b011",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:942315318798:listener/app/eco-webapp-alb/5d5df9d7e80a91d1/76a1fc7140260c5a",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:eu-central-1:942315318798:loadbalancer/app/eco-webapp-alb/5d5df9d7e80a91d1",
            "mutual_authentication": [],
            "port": 80,
            "protocol": "HTTP",
            "region": "eu-central-1",
            "routing_http_request_x_amzn_mtls_clientcert_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_issuer_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_leaf_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_serial_number_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_subject_header_name": null,
            "routing_http_request_x_amzn_mtls_clientcert_validity_header_name": null,
            "routing_http_request_x_amzn_tls_cipher_suite_header_name": null,
            "routing_http_request_x_amzn_tls_version_header_name": null,
            "routing_http_response_access_control_allow_credentials_header_value": "",
            "routing_http_response_access_control_allow_headers_header_value": "",
            "routing_http_response_access_control_allow_methods_header_value": "",
            "routing_http_response_access_control_allow_origin_header_value": "",
            "routing_http_response_access_control_expose_headers_header_value": "",
            "routing_http_response_access_control_max_age_header_value": "",
            "routing_http_response_content_security_policy_header_value": "",
            "routing_http_response_server_enabled": true,
            "routing_http_response_strict_transport_security_header_value": "",
            "routing_http_response_x_content_type_options_header_value": "",
            "routing_http_response_x_frame_options_header_value": "",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "tcp_idle_timeout_seconds": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.main",
            "aws_lb_target_group.web",
            "aws_security_group.alb",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:eu-central-1:942315318798:targetgroup/eco-webapp-tg/74149af0edc6b011",
            "arn_suffix": "targetgroup/eco-webapp-tg/74149af0edc6b011",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/health",
                "port": "5000",
                "protocol": "HTTP",
                "timeout": 25,
                "unhealthy_threshold": 5
              }
            ],
            "id": "arn:aws:elasticloadbalancing:eu-central-1:942315318798:targetgroup/eco-webapp-tg/74149af0edc6b011",
            "ip_address_type": "ipv4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "load_balancing_anomaly_mitigation": "off",
            "load_balancing_cross_zone_enabled": "use_load_balancer_configuration",
            "name": "eco-webapp-tg",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "region": "eu-central-1",
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Environment": "production",
              "Name": "eco-webapp-tg"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "eco-webapp-tg"
            },
            "target_failover": [
              {
              }
            ],
            "target_group_health": [
              {
                "dns_failover": [
                  {
                    "minimum_healthy_targets_count": "1",
                    "minimum_healthy_targets_percentage": "off"
                  }
                ],
                "unhealthy_state_routing": [
                  {
                    "minimum_healthy_targets_count": 1,
                    "minimum_healthy_targets_percentage": "off"
                  }
                ]
              }
            ],
            "target_health_state": [
              {
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0a98c195aa9f74508"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0d99ee70ca61207eb",
            "association_id": "eipassoc-02f18991ddd0c0207",
            "connectivity_type": "public",
            "id": "nat-08e4d6988a3866b34",
            "network_interface_id": "eni-0a02bca3ac807e50a",
            "private_ip": "10.0.1.9",
            "public_ip": "63.176.122.189",
            "region": "eu-central-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-0b56c761a9507e4d8",
            "tags": {
              "Environment": "production",
              "Name": "eco-webapp-nat"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "eco-webapp-nat"
            }
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:942315318798:route-table/rtb-078568bd24ed0b514",
            "id": "rtb-078568bd24ed0b514",
            "owner_id": "942315318798",
            "propagating_vgws": [],
            "region": "eu-central-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-08e4d6988a3866b34",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "production",
              "Name": "eco-webapp-private-subnet-1-rt"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "eco-webapp-private-subnet-1-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a98c195aa9f74508"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:942315318798:route-table/rtb-0dbd2099bf9ab59ea",
            "id": "rtb-0dbd2099bf9ab59ea",
            "owner_id": "942315318798",
            "propagating_vgws": [],
            "region": "eu-central-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-08e4d6988a3866b34",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "production",
              "Name": "eco-webapp-private-subnet-2-rt"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "eco-webapp-private-subnet-2-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a98c195aa9f74508"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:942315318798:route-table/rtb-0fa6a250c0b0ad7a9",
            "id": "rtb-0fa6a250c0b0ad7a9",
            "owner_id": "942315318798",
            "propagating_vgws": [],
            "region": "eu-central-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0cbd5daae8e468215",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Environment": "production",
              "Name": "eco-webapp-public-rt"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "eco-webapp-public-rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a98c195aa9f74508"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e9ab331a5191ad88",
            "region": "eu-central-1",
            "route_table_id": "rtb-078568bd24ed0b514",
            "subnet_id": "subnet-011867d9d3cf18809"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0686f55a215104fd0",
            "region": "eu-central-1",
            "route_table_id": "rtb-0dbd2099bf9ab59ea",
            "subnet_id": "subnet-09e0209e2d1be1324"
          },
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00d80c4bd2cd69d97",
            "region": "eu-central-1",
            "route_table_id": "rtb-0fa6a250c0b0ad7a9",
            "subnet_id": "subnet-0b56c761a9507e4d8"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06d4df2a01a1063d1",
            "region": "eu-central-1",
            "route_table_id": "rtb-0fa6a250c0b0ad7a9",
            "subnet_id": "subnet-0e14fe0f16e7bc027"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:942315318798:security-group/sg-03136fb413ce02ea3",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03136fb413ce02ea3",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "eco-webapp-alb20250818195710168900000001",
            "name_prefix": "eco-webapp-alb",
            "owner_id": "942315318798",
            "region": "eu-central-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production",
              "Name": "eco-webapp-alb-sg"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "eco-webapp-alb-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a98c195aa9f74508"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:942315318798:security-group/sg-0ad74c5a0c7f75481",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ad74c5a0c7f75481",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 5432,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0dce1011d98c669e9"
                ],
                "self": false,
                "to_port": 5432
              }
            ],
            "name": "eco-webapp-rds20250818195714368600000004",
            "name_prefix": "eco-webapp-rds",
            "owner_id": "942315318798",
            "region": "eu-central-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production",
              "Name": "eco-webapp-rds-sg"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "eco-webapp-rds-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a98c195aa9f74508"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.web",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:942315318798:security-group/sg-0dce1011d98c669e9",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0dce1011d98c669e9",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 5000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 5000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "eco-webapp-web20250818195710175200000002",
            "name_prefix": "eco-webapp-web",
            "owner_id": "942315318798",
            "region": "eu-central-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Environment": "production",
              "Name": "eco-webapp-web-sg"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "eco-webapp-web-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0a98c195aa9f74508"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:942315318798:subnet/subnet-011867d9d3cf18809",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.10.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-011867d9d3cf18809",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "942315318798",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Environment": "production",
              "Name": "eco-webapp-private-subnet-1",
              "Type": "Private"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "eco-webapp-private-subnet-1",
              "Type": "Private"
            },
            "vpc_id": "vpc-0a98c195aa9f74508"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:942315318798:subnet/subnet-09e0209e2d1be1324",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.20.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09e0209e2d1be1324",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "942315318798",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Environment": "production",
              "Name": "eco-webapp-private-subnet-2",
              "Type": "Private"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "eco-webapp-private-subnet-2",
              "Type": "Private"
            },
            "vpc_id": "vpc-0a98c195aa9f74508"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:942315318798:subnet/subnet-0b56c761a9507e4d8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0b56c761a9507e4d8",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "942315318798",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Environment": "production",
              "Name": "eco-webapp-public-subnet-1",
              "Type": "Public"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "eco-webapp-public-subnet-1",
              "Type": "Public"
            },
            "vpc_id": "vpc-0a98c195aa9f74508"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:942315318798:subnet/subnet-0e14fe0f16e7bc027",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0e14fe0f16e7bc027",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "942315318798",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Environment": "production",
              "Name": "eco-webapp-public-subnet-2",
              "Type": "Public"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "eco-webapp-public-subnet-2",
              "Type": "Public"
            },
            "vpc_id": "vpc-0a98c195aa9f74508"
          },
          "dependencies": [
            "aws_vpc.main",
            "data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:942315318798:vpc/vpc-0a98c195aa9f74508",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0ce6f4fb0d4339f30",
            "default_route_table_id": "rtb-06d34ed93ee106a11",
            "default_security_group_id": "sg-06e6529fc33ad0fbc",
            "dhcp_options_id": "dopt-0906f6ee352d5899c",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0a98c195aa9f74508",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-06d34ed93ee106a11",
            "owner_id": "942315318798",
            "region": "eu-central-1",
            "tags": {
              "Environment": "production",
              "Name": "eco-webapp-vpc"
            },
            "tags_all": {
              "Environment": "production",
              "Name": "eco-webapp-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}